<resources>
    <string name="app_name">Polio Protection</string>
    <string name="login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_admin_home">Admin</string>
    <string name="nav_header_title_admin">Android Studio</string>
    <string name="nav_header_subtitle_admin">android.studio@android.com</string>
    <string name="nav_header_desc_admin">Navigation header</string>

    <string name="title_activity_team_home">Team</string>
    <string name="nav_header_title_team">Android Studio</string>
    <string name="nav_header_subtitle_team">android.studio@android.com</string>
    <string name="nav_header_desc_team">Navigation header</string>


    <!-- Admin Menu -->
    <string name="menu_view_all_result">View All Result</string>
    <string name="menu_campaign">Add/Update Campaign</string>
    <string name="menu_worker">Add/Update Worker</string>
    <string name="menu_team">Add/Update Team</string>
    <string name="menu_children">Children</string>

    <!-- Team Menu -->
    <string name="menu_mark_childern">Mark Children</string>
    <string name="menu_add_drop">Add/Update Children</string>
    <string name="menu_cold_chain">Cold Chain Box</string>
    <string name="menu_check_report">Check Report</string>
    <string name="menu_team_info">Team Info</string>
    <string name="menu_logout">Logout</string>


    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
