<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".admin.Adminhome"
    tools:showIn="@layout/admin_app_bar_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/onelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_all_result_activity"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/one_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/ic_assessment"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/one_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_view_all_result"
                            android:textSize="16dp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/twolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_update_campaign_activity"
                    android:layout_width="0dp"
                    android:layout_height="135dp"
                    android:layout_margin="10dp"
                    android:layout_weight=".50"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/two_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/ic_assignment_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/two_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_campaign"
                            android:textSize="16dp" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_update_worker_activity"
                    android:layout_width="0dp"
                    android:layout_height="135dp"
                    android:layout_margin="10dp"
                    android:layout_weight=".50"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/there_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/ic_add_drop_childern" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/there_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_worker"
                            android:textSize="16dp" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/therelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_update_team_activity"
                    android:layout_width="0dp"
                    android:layout_height="135dp"
                    android:layout_margin="10dp"
                    android:layout_weight=".50"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/four_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/ic_assign_team_work" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/four_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_team"
                            android:textSize="16dp" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/admin_children_info_activity"
                    android:layout_width="0dp"
                    android:layout_height="135dp"
                    android:layout_margin="10dp"
                    android:layout_weight=".50"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/five_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/ic_person_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/five_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_children"
                            android:textSize="16dp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>