<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".team.Teamhome"
    tools:showIn="@layout/team_app_bar_home">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Box Temprature / Status"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Box Temprature is 12'C"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="connecting..."
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Off"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_off_radio_button" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/onelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/mark_children_activity"
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/one_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/ic_mark_childern"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/one_image"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/menu_mark_childern"
                                android:textSize="16dp" />

                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/twolayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/add_update_children_activity"
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".50"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/two_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/ic_add_drop_childern" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/two_image"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/menu_add_drop"
                                android:textSize="16dp" />

                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cold_chain_activity"
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".50"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/there_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/ic_cold_chain_box" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/there_image"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/menu_cold_chain"
                                android:textSize="16dp" />

                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/therelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/check_report_children_activity"
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".50"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/four_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/ic_assessment" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/four_image"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/menu_check_report"
                                android:textSize="16dp" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/team_info_children_activity"
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".50"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/five_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/ic_info_black_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/five_image"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/menu_team_info"
                                android:textSize="16dp" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>


</LinearLayout>